--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          var s = &#34;JavaScript syntax highlighting&#34;; alert(s); git submodule add -b master https://github.com/stephane303/stephane303.github.io.git public
+          var s = &#34;JavaScript syntax highlighting&#34;; alert(s); cd ..
         </div>
           <a href="https://stephane303.github.io/posts/my-first-post/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
